--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Mr Coxall's Space Alien HTML" />
+        <meta name="author" content="Mr. Coxall" />
+            <meta name="theme-color" color="#FFFFFF" />
     <title>Space Aliens</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="apple-touch-icon" sizes="32x32" href="apple-touch-icon.png" />
+    <link rel="apple-touch-icon" sizes="16x16" href="apple-touch-icon.png" />
   </head>
   <body>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.54.0/dist/phaser.js"></script>
